--- a/pacote-download/JOGO DA COBRINHA/projeto jogo da cobrinha/index.html
+++ b/pacote-download/JOGO DA COBRINHA/projeto jogo da cobrinha/index.html
@@ -56,7 +56,7 @@
 			//DEFINE O PLANO DE FUNDO PRETO
 			contexto.fillStyle = "black";
 			//VAI CRIAR UM RETANGULO E PINTAR DE PRETO TODA PARTE DO RETANGULO
-			contexto.fillRect(0,0, stage.width, palco.height);
+			contexto.fillRect(0,0, palco.width, palco.height);
 
 			//DEFINIR A COR DA CABEÇA DA COBRA
 			contexto.fillStyle = "red";
